[package]
name = "bullet-hell"
version = "0.0.1"
edition = "2021"

[lib]
name = "zxcengine"
path = "src/lib.rs"

[dependencies]
wgpu = "22.1.0"

# Web
[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"

web-sys = { package = "web-sys", version = "0.3.70", features = [
    'Document',
    'Window',
    'Element',
    'HtmlCanvasElement',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlVertexArrayObject',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation',
] }
