[package]
name = "bullet-hell"
version = "0.0.1"
edition = "2021"

[lib]
name = "zxcengine"
path = "src/lib.rs"

[dependencies]
cfg-if = "1"
wgpu = "22.1.0"
log = "0.4"
winit = "0.29.15"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
pollster = "0.3.0"
env_logger = "0.11.5"
mint = "0.5.9"

# Web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
